<resources>
    <string name="app_name">cat database</string>
    <string name="add">добавить</string>
    <string name="sort">сортировать</string>
    <string name="by_name">по имени</string>
    <string name="by_age">по возросту</string>
    <string name="date">по дате</string>
    <string name="name">кличка</string>
    <string name="breed">порода</string>
    <string name="age">возраст</string>
    <string name="add_name">введите кличку</string>
    <string name="repository">выбор репоситория</string>
    <string name="room">Room</string>
    <string name="cursor">Cursor</string>
    <string name="use_room">вы используете Room</string>
    <string name="use_cursor">вы используете Cursor</string>
    <string name="not_all_fields">не все поля заполнены</string>
    <string name="cat_delete">Кот удалён</string>
    <string name="cat_new">Новый кот</string>
    <string name="cancel">ОТМЕНИТЬ</string>
    <string name="editing">Редактирование</string>
</resources>