<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_more"
        android:title="@string/repository"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_room"
                android:title="@string/room" />
            <item
                android:id="@+id/action_cursor"
                android:title="@string/cursor" />
        </menu>

    </item>

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/by_name" />
            <item
                android:id="@+id/action_sort_by_age"
                android:title="@string/by_age" />
            <item
                android:id="@+id/action_sort_by_date"
                android:title="@string/date" />
        </menu>

    </item>

</menu>